--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://unpkg.com/@blueprintjs/core@^1.11.0/dist/blueprint.css" rel="stylesheet" />
     <title>Peep</title>
   </head>
-  <body> 
+  <body style="background-color: #293742;"> 
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
