I212: Transition to BluePrintJSv2

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
     <meta name="theme-color" content="#000000">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href="https://unpkg.com/normalize.css@^4.1.1" rel="stylesheet" />
-    <link href="https://unpkg.com/@blueprintjs/core@^1.11.0/dist/blueprint.css" rel="stylesheet" />
+    <link href="https://unpkg.com/normalize.css@^7.0.0" rel="stylesheet" />
+    <link href="https://unpkg.com/@blueprintjs/core@^2.0.0/lib/css/blueprint.css" rel="stylesheet" />
+    <link href="https://unpkg.com/@blueprintjs/icons@^2.0.0/lib/css/blueprint-icons.css" rel="stylesheet" />
     <title>Peep</title>
   </head>
-  <body style="background-color: #293742;"> 
+  <body style="background-color: #293742;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
